[package]
name = "libfuckyou"
description = "A notification daemon that doesn't do anything."
version = "0.1.1"
authors = ["Silver"]
edition = "2021"

[dependencies]
zbus = "5.5"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
